--- a/dataviz_1/styles.css
+++ b/dataviz_1/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 *{
-    background-color: #7e9a9a;
+    background-color: #212F3D;
     color: white; 
     font-family: 'Montserrat', sans-serif;  
 }
