--- a/dataviz_3/styles.css
+++ b/dataviz_3/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 * {
-    background-color: #7e9a9a;
+    background-color: #0E6251;
     color: #e5fffa; 
     font-family: 'Montserrat', sans-serif;  
 }
