--- a/dataviz_3/styles.css
+++ b/dataviz_3/styles.css
@@ -6,15 +6,16 @@
 }
 
 h1 {
-    padding: 40px 40px 0px 100px;
+    padding: 30px 40px 0px 120px;
+
 }
 
 p{
-    padding: 4px 40px 0px 100px;
+    padding: 4px 40px 0px 120px;
     font-size: 20px;
 }
 
 #chart {
-    margin: 10px;
-    padding: 20px;
+    margin: 10px 0px 0px;
+    padding: 0px 40px;
 }
