--- a/dataviz_1/styles.css
+++ b/dataviz_1/styles.css
@@ -11,10 +11,16 @@ h1 {
     font-size: 40px;
     padding: 40px 40px 10px 100px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
+}
+
+p{
+    padding: 4px 40px 0px 100px;
+    font-size: 20px;
+    text-align: left;
 }
 
 #chart {
-    margin: 10px;
+    margin: 40px ;
     padding: 20px;
 }
