--- a/dataviz_4/styles.css
+++ b/dataviz_4/styles.css
@@ -8,18 +8,20 @@
 
 h1 {
     font-size: 40px;
-    padding: 50px 40px 10px 100px;
+    padding: 40px 40px 10px 100px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
+}
+
+p{
+    padding: 4px 40px 0px 100px;
+    font-size: 20px;
+    text-align: left;
 }
 
 #chart {
     font-size: 20px;
-    margin: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-left: 190px;
-    padding: 5gi0px 80px;
-    align-self: center;
+    margin: 40px 80px ;
+    padding: 20px;
     
 }
